--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="id" amp i-amphtml-binding i-amphtml-layout i-amphtml-no-boilerplate transformed="self;v=1"
     itemscope="itemscope" itemtype="https://schema.org/WebPage">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -1868,7 +1867,7 @@
                             <div class="row">
                                 <div class="col-xs-6"> <a href="http://28dewa.ramdajs.com" title="Situs Slot" class="spacer"> <span
                                             class="tron">Situs Slot</span> </a> </div>
-                                <div class="col-xs-6"> <a href="http://28dewa.ramdajs.com" target="_blank" title="SLOT DEPOSIT 5RB"
+                                <div class="col-xs-6"> <a href="http://28dewa.ramdajs.com" target="_blank" title="SLOT"
                                         class="spacer"> <span class="tron">28DEWA SLOT</span> </a> </div>
                             </div>
                         </div>
@@ -1918,14 +1917,13 @@
                     <div class="row mb-3" style="background-color: #020202;">
                         <div class="col-md-12 pb-5">
                             <div class="site-description">
-                                <h1 style="color: #fedc3d;"><strong>28DEWA > Link Daftar dan Login Slot RTP Tertinggi Terpercaya
-                                        Deposit 5RB</strong></h1>
+                                <h1 style="color: #fedc3d;"><strong>28DEWA > Link Daftar dan Login Slot RTP Tertinggi Terpercaya</strong></h1>
                                 <p class="seo-text">Kata siapa bermain <a href="http://28dewa.ramdajs.com" style="color: #fedc3d;">
                                         28DEWA slot </a>online membutuhkan modal yang besar? Nyatanya, ada cara bermain slot
                                     online dengan murah meriah, yaitu dengan mendaftar di situs slot online terpercaya
                                     deposit termurah yaitu 28DEWA. Di situs slot online 28DEWA ini, Anda tidak perlu
                                     merogoh kantong dengan dalam saat pertama kali bermain slot online, dan bisa memulai
-                                    dengan saldo deposit 5RB saja.</p>
+                                    dengan saldo deposit 50RB saja.</p>
                                 <p class="seo-text">Meskipun minimal depositnya terbilang sangat murah, namun manfaat
                                     yang bisa Anda rasakan sebagai member situs slot online 28DEWA ini sangatlah
                                     banyak. Bahkan, dengan modal 50RB tersebut, Anda sudah bisa memainkan ratusan bahkan
